[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/daily/baito.gd" id="1"]

[node name="Baito" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0941176, 0.0313726, 0.105882, 1)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
offset_left = 80.0
offset_top = 80.0
offset_right = 1200.0
offset_bottom = 680.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderLabel" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "チルハウス"

[node name="BodyLabel" type="RichTextLabel" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "何をする？"

[node name="MenuContainer" type="VBoxContainer" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="ChoiceContainer" type="VBoxContainer" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="BackButton" type="Button" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "マップへ戻る"
